Revision history for {{$dist->name}}

{{$NEXT}}

0.009     2014-01-22 18:20:34+00:00 Europe/London

  - debugging regexes
  - added Simple.pm
  - switched regex building to tied hash

0.008     2014-01-15 16:36:51+00:00 Europe/London

  - fixing parse.t tests
  - adding extract() method

0.007     2014-01-14 16:26:16+00:00 Europe/London

  - BUGFIX: 'P' missing in possible subdistricts for single character areas ('N1P' only use)

0.006     2013-12-20 12:57:44 Europe/London

  - Tidy and tests

0.005     2013-10-23 12:56:02 Europe/London

  - Bumping version number, conflict with existing version from Geo::UK::Postcode

0.001     2013-10-23 12:20:07 Europe/London

  - Initial release - Separated from Geo::UK::Postcode and simplified dependencies
