@@ -33,7 +33,17 @@ foreach (@tests) {
 
             foreach my $expected ( TestGeoUKPostcode->test_pcs($options) ) {
 
+                note "upper case";
+
                 my @raw_list = TestGeoUKPostcode->get_format_list($expected);
+
+                subtest( $_ => sub { test_parse( $_, $options, $expected ) } )
+                    foreach @raw_list;
+
+                note "lower case";
+                $options->{'case-insensitive'} = 1;
+
+                my @raw_list = TestGeoUKPostcode->get_lc_format_list($expected);
 
                 subtest( $_ => sub { test_parse( $_, $options, $expected ) } )
                     foreach @raw_list;
